--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 }
 body{
     font-size: 32px;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(0deg, #3cff4c, #4ed6ff);
 }
 h2{
